syntax = "proto3";

package go_messenger;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

option go_package = "pkg/api/accounts";

message RegisterRequest {
  string email = 1 [json_name = "email", (buf.validate.field).required = true, (buf.validate.field).string.email = true];
  string name = 2 [json_name = "name", (buf.validate.field).required = true, (buf.validate.field).string.min_len = 2];
  string username = 3 [json_name = "username", (buf.validate.field).required = true, (buf.validate.field).string.min_len = 4];
  string description = 4 [json_name = "description", (buf.validate.field).required = true, (buf.validate.field).string.min_len = 1];
  string password = 5 [json_name = "password", (buf.validate.field).required = true, (buf.validate.field).string.min_len = 6];
}

message UserRegisterResponse {
  uint64 id = 1 [json_name = "id"];
  string email = 2 [json_name = "email"];
  string name = 3 [json_name = "name"];
  string username = 4 [json_name = "username"];
  string description = 5 [json_name = "description"];
  google.protobuf.Timestamp created_at = 6 [json_name = "created_at"];
  google.protobuf.Timestamp updated_at = 7 [json_name = "updated_at"];
  string access_token = 8 [json_name = "access_token"];
  string refresh_token = 9 [json_name = "refresh_token"];
}

message LoginRequest {
  string email = 1 [json_name = "email", (buf.validate.field).required = true];
  string password = 2 [json_name = "password", (buf.validate.field).required = true];
}

message UserLoginResponse {
  uint64 id = 1 [json_name = "id"];
  string email = 2 [json_name = "email"];
  string name = 3 [json_name = "name"];
  string username = 4 [json_name = "username"];
  string description = 5 [json_name = "description"];
  google.protobuf.Timestamp created_at = 6 [json_name = "created_at"];
  google.protobuf.Timestamp updated_at = 7 [json_name = "updated_at"];
  string access_token = 8 [json_name = "access_token"];
  string refresh_token = 9 [json_name = "refresh_token"];
}

message UserProfile {
  uint64 id = 1 [json_name = "id"];
  string email = 2 [json_name = "email"];
  string name = 3 [json_name = "name"];
  string username = 4 [json_name = "username"];
  string description = 5 [json_name = "description"];
  google.protobuf.Timestamp created_at = 6 [json_name = "created_at"];
  google.protobuf.Timestamp updated_at = 7 [json_name = "updated_at"];
}

message GetUserRequest {
  uint64 id = 1 [json_name = "id", (buf.validate.field).string.uuid = true];
}

message GetProfileRequest {
  uint64 id = 1 [json_name = "id", (buf.validate.field).string.uuid = true];
}

message UpdateProfileRequest {
  string email = 1 [json_name = "email", (buf.validate.field).string.email = true];
  string name = 2 [json_name = "name", (buf.validate.field).string.min_len = 2];
  string username = 3 [json_name = "username", (buf.validate.field).string.min_len = 4];
  string description = 4 [json_name = "description", (buf.validate.field).string.min_len = 1];
}

message UpdateProfileResponse {
  uint64 id = 1 [json_name = "id"];
  string email = 2 [json_name = "email"];
  string name = 3 [json_name = "name"];
  string username = 4 [json_name = "username"];
  string description = 5 [json_name = "description"];
  google.protobuf.Timestamp created_at = 6 [json_name = "created_at"];
  google.protobuf.Timestamp updated_at = 7 [json_name = "updated_at"];
}

message DeleteProfileRequest {
  uint64 id = 1 [json_name = "id",  (buf.validate.field).required = true, (buf.validate.field).string.uuid = true];
}

message DeleteProfileResponse {
  string message = 1 [json_name = "message"];
}